--- a/application-dev.properties
+++ b/application-dev.properties
@@ -1,3 +1,6 @@
 #自定义变量
 twocodeUrl = /tmp/ticket-center/twocode/
 abc=123
+spring.datasource.url=jdbc:mysql://192.168.1.60:3306/zj_base_sh?useSSL=false&useUnicode=true&characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=devroot
