--- a/application-dev.properties
+++ b/application-dev.properties
@@ -1,6 +1,16 @@
 #自定义变量
 twocodeUrl = /tmp/ticket-center/twocode/
 abc=123
+
+server.port=9000
+spring.application.name=scenic-common
+#spring.cloud.inetutils.ignored-interfaces=eth0
+eureka.instance.prefer-ip-address=true
+eureka.instance.lease-renewal-interval-in-seconds=5
+eureka.instance.lease-expiration-duration-in-seconds=15
+#注册中心
+eureka.client.service-url.defaultZone=http://localhost:5000/eureka
+
 spring.datasource.url=jdbc:mysql://192.168.1.60:3306/zj_base_zh?useSSL=false&useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=devroot
