--- a/application-debug.properties
+++ b/application-debug.properties
@@ -1,3 +1,4 @@
 #自定义变量
-twocodeUrl = D:\\twocode\\
-abc=123
+spring.datasource.url=jdbc:mysql://192.168.1.60:3306/zj_base_zh?useSSL=false&useUnicode=true&characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=devroot
