--- a/application-debug.properties
+++ b/application-debug.properties
@@ -1,4 +1,4 @@
 #自定义变量
-spring.datasource.url=jdbc:mysql://192.168.1.60:3306/zj_base_zh?useSSL=false&useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://192.168.1.50:3306/zj_base_sh?useSSL=false&useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
-spring.datasource.password=devroot
+spring.datasource.password=Zhongjing
